--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,10 @@ body {
     display: flex;
     gap: 70px;
     align-self: center;
-    color: #909090 !important;
+    color: #978a75 !important;
+}
+.h22{
+    font-weight: 600;
 }
 .right-nav{
     display: flex;
@@ -33,9 +36,9 @@ body {
 }
 .nav-item :hover{
     cursor: pointer;
-    color: white;
+    color: black;
     transition: color 0.2s ease-in-out;
-    fill: white;
+    fill: black;
     text-decoration: line-through;
 }
 .nav-icons{
@@ -45,7 +48,7 @@ body {
     text-decoration: line-through;
 }
 hr{
-    border-color: #ada494;
+    border-color: #a3998c;
     margin-left:3em;
     margin-right:3em;
 
