--- a/src/Shop/Allmen.css
+++ b/src/Shop/Allmen.css
@@ -67,4 +67,17 @@
         justify-self: center;
         align-self: center;
     }
+    .products{
+        flex-wrap: wrap;
+        margin: 0 !important;
+        margin-right: 0em;
+    }
+}
+.products{
+    flex-wrap: wrap;
+    margin: 2em;
+    margin-right: 0em;
+}
+.product{
+    max-width: 150px;
 }
