--- a/src/Shop/Shop.css
+++ b/src/Shop/Shop.css
@@ -80,7 +80,9 @@ body {
 
 
 @media screen and (max-width: 1000px) {
-
+    .products{
+        margin-bottom: 5em !important;
+    }
     .product-image{
         width: 130px;
     }
