--- a/src/Components/Homepage/button.css
+++ b/src/Components/Homepage/button.css
@@ -1,4 +1,4 @@
-.button-27 {
+.shop_now {
     appearance: none;
     background-color: #ECD8BD;
     border: none;
@@ -21,20 +21,20 @@
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    width: 100%;
+    width: 240px;
     will-change: transform;
   }
   
-  .button-27:disabled {
+  .shop_now:disabled {
     pointer-events: none;
   }
   
-  .button-27:hover {
+  .shop_now:hover {
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
   }
   
-  .button-27:active {
+  .shop_now:active {
     box-shadow: none;
     transform: translateY(0);
   }
