--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -29,7 +29,7 @@ body {
     gap: 1em;
     max-width: 1200px;
     width: 100%;
-    padding: 2em 1em;
+    padding: 0em 0em !important;
 }
 
 /* Each product card */
