--- a/src/Components/Homepage/Homepage.css
+++ b/src/Components/Homepage/Homepage.css
@@ -1,14 +1,19 @@
 .homepage_container{
     display: flex;
     flex-direction: column;
+    overflow: hidden ;
+    /* remove scrollbar for all browsers */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
 }
 .homepage{
     display: flex;
     justify-content: space-around;
     align-items: center;    
-    margin-top: 3em;
+    margin-top: 2em !important;
     margin: 3em;
-    margin-bottom: 0;
+    margin-bottom: 1em;
 }
 .homepage .image{
     width: 500px;
